--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Note sender</title>
+  <title>Colorer</title>
   <link rel="stylesheet" href="app.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,24 +8,8 @@
 <body>
 
 <div id="status-message" class="hidden"></div>
-
-<section id="note-form">
-
-<section>
-  <h4>Archive</h4>
-  <input type="text" id="archive" value="">
-  <h4>Password</h4>
-  <input type="password" id="password" value="">
-  <h4>Note</h4>
-  <textarea data-of="caption"></textarea>
-  <h4>Media</h4>
-  <input type="file" id="media-file" accept="image/*, video/*">
-</section>
-
-<button id="submit-note-button">Note!</button>
-
-<div id="save-message" class="hidden"></div>
-</section>
+<canvas id="source-canvas"></canvas>
+<canvas id="target-canvas"></canvas>
 
 <script src="index.js"></script>
 
