tweaking rounding issues

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <body>
 
 <div id="status-message" class="hidden"></div>
-<canvas id="source-canvas"></canvas>
-<canvas id="target-canvas"></canvas>
+
+<div id="canvas-container">
+    <canvas id="source-canvas"></canvas>
+    <canvas id="target-canvas"></canvas>
+</div>
 
 <script src="index.js"></script>
 
