Support multiple runs against the same source image.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <div id="status-message" class="hidden"></div>
 
-    <canvas id="source-canvas"></canvas>
-    <canvas id="target-canvas"></canvas>
+<canvas id="source-canvas"></canvas>
+<div id="target-canvases-container"></div>
 
 <script src="index.js"></script>
 
