smile, you're on camera. Example: http://localhost:9966/#useCamera=yes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div id="status-message" class="hidden"></div>
 
 <canvas id="source-canvas"></canvas>
+<video id="camera-buffer" class="hidden"></video>
 <div id="target-canvases-container"></div>
 
 <script src="index.js"></script>
